syntax = "proto3";

package user_service;

service UserService {
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  int64 createdAt = 4;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  string id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
